Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,5 @@
 gigs:
-  - title: 'Mike Boddé & Mike del Ferro, Mike Kwadraat'
-    date: 2017-08-21 20:00:00
-    location: Concertgebouw
-    venue: Amsterdam
-    url: www.concertgebouw.nl
-  - title: with Jeroen van Veen
+  - title: 'with Jeroen van Veen, Aart Bergwerff'
     date: 2017-09-28 20:00:00
     location: Breda (NL)
     venue: Orgelstorm festival
