Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ gigs:
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-23 20:30:00
     location: Stadstheater
-    venue: Heiloo
+    venue: Zoetermeer
     url: www.stadstheater.nl
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-24 20:30:00
