Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -137,5 +137,5 @@ gigs:
   - title: Mike del Ferro trio
     date: 2018-03-25 15:00:00
     location: Rosa Spier Huis
-    venue: Rosa Spier Huis
+    venue: Laren (NL Noord Holland)
     url:
