--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ gigs:
     date: 2017-11-23 08:00:00
     location: New Combo
     venue: 'Fukuoka, Japan'
-    url:
+    url: 'http://newcombo.sakura.ne.jp/live11.html'
   - title: Mike del Ferro and Wim Dijkgraaf
     date: 2018-01-21 00:00:00
     location: Plus etage
@@ -86,9 +86,9 @@ gigs:
     url:
   - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
     date: 2017-11-24 20:00:00
-    location: Hirado Cityhall
-    venue: Nagasaki (Japan)
-    url:
+    location: 'Garaman Hall, Ginoza, Okinawa (Japan)'
+    venue: Okinawa (Japan)
+    url: 'http://garaman.jp/sf'
   - title: Duo Mike Boddé and Mike del Ferro-Mike Kwadraat
     date: 2018-03-10 20:00:00
     location: Paradox
@@ -100,42 +100,64 @@ gigs:
     venue: Amsterdam
     url:
   - title: Mike del Ferro & Jeroen van Veen
-    date: 2017-11-16 20:00:00
+    date: 2017-11-16 20:30:00
     location: Roode Bioscoop
     venue: Amsterdam
     url: www.roodebioscoop.nl
   - title: Mike del Ferro & Mike Boddé
-    date: 2017-11-17 20:00:00
+    date: 2017-11-17 20:30:00
     location: Roode Bioscoop
     venue: Amsterdam
     url: www.roodebioscoop.nl
   - title: Mike del Ferro & Remy van Kesteren
-    date: 2017-11-18 20:00:00
+    date: 2017-11-18 20:30:00
     location: Roode Bioscoop
     venue: Amsterdam
     url: www.roodebioscoop.nl
   - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
     date: 2017-11-29 20:00:00
-    location: Haretara
+    location: Haretara Sorani Mame Maite
     venue: Tokyo (Japan)
-    url:
-  - title: 'South Africa, Masterclasses, Concerts and Recordings, more details soon'
+    url: 'http://mameromantic.com'
+  - title: >-
+      4 weeks South Africa, Masterclasses, Concerts and Recordings, more details
+      soon
     date: 2017-12-13 00:00:00
     location:
     venue: South Africa
     url:
   - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
     date: 2017-11-28 20:00:00
-    location: Mamselle
+    location: Mam'selle
     venue: Fukuroi (Japan)
-    url:
+    url: 'http://music.geocities.jp/mamselle33'
   - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
-    date: 2017-11-30 00:00:00
+    date: 2017-11-30 20:00:00
     location: Up
     venue: Koga (Japan)
-    url:
+    url: 'http://www.ups-jazz.com/index.shtml'
   - title: Mike del Ferro trio
     date: 2018-03-25 15:00:00
     location: Rosa Spier Huis
     venue: Laren (NL Noord Holland)
+    url:
+  - title: Guest appearance with Flamenco Masters Jaco Abel & Julian Heredia
+    date: 2018-01-19 20:30:00
+    location: Munganga
+    venue: Amsterdam (NL)
+    url:
+  - title: Canto Ostinato meets Jazz with Sandra & Jeroen van Veen
+    date: 2018-02-03 20:00:00
+    location: Pernissimo
+    venue: Pernis (NL)
+    url: www.pernissimo.nl
+  - title: Mike del Ferro trio
+    date: 2018-02-04 03:00:00
+    location: Münster (Germany)
+    venue: TBA
+    url:
+  - title: Jeroen van Veen & Mike del Ferro at the Barn
+    date: 2018-02-11 03:00:00
+    location: Baambrugge (NL)
+    venue: TBA
     url:
