Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -153,11 +153,16 @@ gigs:
     url: www.pernissimo.nl
   - title: Mike del Ferro trio
     date: 2018-02-04 03:00:00
-    location: Münster (Germany)
-    venue: TBA
+    location: TBA
+    venue: Münster (Germany)
     url:
   - title: Jeroen van Veen & Mike del Ferro at the Barn
     date: 2018-02-11 03:00:00
     location: Baambrugge (NL)
     venue: TBA
+    url:
+  - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
+    date: 2017-11-25 20:00:00
+    location: Hirado City Hall
+    venue: Nagasaki (Japan)
     url:
