Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -166,3 +166,8 @@ gigs:
     location: Hirado City Hall
     venue: Nagasaki (Japan)
     url:
+  - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
+    date: 2017-11-27 08:00:00
+    location: Mr.Kenny's
+    venue: Nagoya (Japan)
+    url: 'https://www.mrkennys.com/schedule/'
