Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -158,8 +158,8 @@ gigs:
     url:
   - title: Jeroen van Veen & Mike del Ferro at the Barn
     date: 2018-02-11 03:00:00
-    location: Baambrugge (NL)
-    venue: TBA
+    location: TBA
+    venue: Baambrugge (NL)
     url:
   - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
     date: 2017-11-25 20:00:00
