--- a/_config.yml
+++ b/_config.yml
@@ -99,21 +99,21 @@ gigs:
     location: Ostade Theater
     venue: Amsterdam
     url:
-  - title: Mike del Ferro & Jeroen van Veen
-    date: 2017-11-16 20:30:00
-    location: Roode Bioscoop
+  - title: 'Mike del Ferro & friends, more details soon'
+    date: 2018-02-17 20:30:00
+    location: Munganga
     venue: Amsterdam
-    url: www.roodebioscoop.nl
-  - title: Mike del Ferro & Mike Boddé
-    date: 2017-11-17 20:30:00
-    location: Roode Bioscoop
-    venue: Amsterdam
-    url: www.roodebioscoop.nl
-  - title: Mike del Ferro & Remy van Kesteren
-    date: 2017-11-18 20:30:00
-    location: Roode Bioscoop
-    venue: Amsterdam
-    url: www.roodebioscoop.nl
+    url: www.munganga.nl
+  - title: Mike del Ferro trio
+    date: 2018-03-02 20:30:00
+    location: TBA
+    venue: Kobe (Japan)
+    url:
+  - title: Mike del Ferro trio
+    date: 2018-02-03 20:30:00
+    location: TBA
+    venue: Kobe (Japan)
+    url:
   - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
     date: 2017-11-29 20:00:00
     location: Haretara Sorani Mame Maite
