Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -74,69 +74,64 @@ gigs:
     location: Energiehuis
     venue: Dordrecht
     url: www.kunstmin.nl
-  - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
-    date: 2017-11-23 08:00:00
-    location: New Combo
-    venue: 'Fukuoka, Japan'
-    url: 'http://newcombo.sakura.ne.jp/live11.html'
+  - title: Mike del Ferro trio with Shota Ishikawa & Sebastiaan Kaptein
+    date: 2018-03-01 20:00:00
+    location: TBA
+    venue: 'Kobe, Japan'
+    url: 'https://www.facebook.com/dai.murata.3'
   - title: Mike del Ferro and Wim Dijkgraaf
     date: 2018-01-21 00:00:00
     location: Plus etage
     venue: Baarle Nassau
     url:
-  - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
-    date: 2017-11-24 20:00:00
-    location: 'Garaman Hall, Ginoza, Okinawa (Japan)'
-    venue: Okinawa (Japan)
-    url: 'http://garaman.jp/sf'
+  - title: Mike del Ferro trio with Shota Ishikawa & Sebastiaan Kaptein
+    date: 2018-03-02 20:00:00
+    location: TBA
+    venue: 'Kobe, Japan'
+    url: 'https://www.facebook.com/dai.murata.3'
   - title: Duo Mike Boddé and Mike del Ferro-Mike Kwadraat
     date: 2018-03-10 20:00:00
     location: Paradox
     venue: Tilburg
     url: www.paradoxtilburg.nl
-  - title: Duo Jeroen van Veen & Mike del Ferro
-    date: 2017-12-09 20:00:00
-    location: Ostade Theater
-    venue: Amsterdam
-    url:
+  - title: Mike del Ferro & Mbuso Khoza
+    date: 2018-01-05 19:00:00
+    location: Headroom
+    venue: Durban
+    url: 'https://www.facebook.com/events/146881809300816/'
   - title: 'Mike del Ferro & friends, more details soon'
     date: 2018-02-17 20:30:00
     location: Munganga
     venue: Amsterdam
     url: www.munganga.nl
   - title: Mike del Ferro trio
-    date: 2018-03-02 20:30:00
+    date: 2018-03-03 20:30:00
     location: TBA
     venue: Kobe (Japan)
-    url:
-  - title: Mike del Ferro trio
-    date: 2018-02-03 20:30:00
-    location: TBA
-    venue: Kobe (Japan)
-    url:
-  - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
-    date: 2017-11-29 20:00:00
-    location: Haretara Sorani Mame Maite
-    venue: Tokyo (Japan)
-    url: 'http://mameromantic.com'
+    url: 'https://www.facebook.com/dai.murata.3'
   - title: >-
-      4 weeks South Africa, Masterclasses, Concerts and Recordings, more details
-      soon
-    date: 2017-12-13 00:00:00
-    location:
-    venue: South Africa
+      Mike del Ferro , Mbuso Khoza and the KZN Heritage Choir (afternoon
+      concert!)
+    date: 2018-01-07 14:00:00
+    location: Kwadukuzu Town Hall
+    venue: Durban (South Africa)
+    url: 'http://www.isupportdoyou.com/'
+  - title: Mike del Ferro trio & Trijntje Oosterhuis
+    date: 2018-01-20 20:30:00
+    location: Splendor
+    venue: Amsterdam (NL)
+    url: www.splendoramsterdam.com
+  - title: Recordings with Mbuso Khoza and the KZN Heritage Choir
+    date: 2018-01-08 00:00:00
+    location: SABC Studios
+    venue: Durban (South Africa)
     url:
-  - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
-    date: 2017-11-28 20:00:00
-    location: Mam'selle
-    venue: Fukuroi (Japan)
-    url: 'http://music.geocities.jp/mamselle33'
-  - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
-    date: 2017-11-30 20:00:00
-    location: Up
-    venue: Koga (Japan)
-    url: 'http://www.ups-jazz.com/index.shtml'
   - title: Mike del Ferro trio
+    date: 2018-03-20 20:00:00
+    location: Luxor theater
+    venue: Zutphen (NL)
+    url: 'https://www.facebook.com/jazzinluxor'
+  - title: Mike del Ferro trio (afternoon concert!)
     date: 2018-03-25 15:00:00
     location: Rosa Spier Huis
     venue: Laren (NL Noord Holland)
@@ -152,22 +147,7 @@ gigs:
     venue: Pernis (NL)
     url: www.pernissimo.nl
   - title: Mike del Ferro trio
-    date: 2018-02-04 03:00:00
+    date: 2018-02-04 15:00:00
     location: TBA
     venue: Münster (Germany)
     url:
-  - title: Jeroen van Veen & Mike del Ferro at the Barn
-    date: 2018-02-11 03:00:00
-    location: TBA
-    venue: Baambrugge (NL)
-    url:
-  - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
-    date: 2017-11-25 20:00:00
-    location: Hirado City Hall
-    venue: Nagasaki (Japan)
-    url:
-  - title: Mike del Ferro trio with Jeroen Vierdag & Sebastiaan Kaptein
-    date: 2017-11-27 08:00:00
-    location: Mr.Kenny's
-    venue: Nagoya (Japan)
-    url: 'https://www.mrkennys.com/schedule/'
