Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ gigs:
   - title: Mike del Ferro & Mbuso Khoza
     date: 2018-01-05 19:00:00
     location: Headroom
-    venue: Durban
+    venue: Durban (South Africa)
     url: 'https://www.facebook.com/events/146881809300816/'
   - title: 'Mike del Ferro & friends, more details soon'
     date: 2018-02-17 20:30:00
