--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ gigs:
     location: Munganga
     venue: Amsterdam
     url: www.munganga.nl
-  - title: Mike del Ferro trio
+  - title: Mike del Ferro trio with Shota Ishikawa & Sebastiaan Kaptein
     date: 2018-03-03 20:30:00
     location: TBA
     venue: Kobe (Japan)
