Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ gigs:
   - title: Mike del Ferro trio with Shota Ishikawa & Sebastiaan Kaptein
     date: 2018-03-01 20:00:00
     location: TBA
-    venue: 'Kobe, Japan'
+    venue: Kobe (Japan)
     url: 'https://www.facebook.com/dai.murata.3'
   - title: Mike del Ferro and Wim Dijkgraaf
     date: 2018-01-21 00:00:00
@@ -87,7 +87,7 @@ gigs:
   - title: Mike del Ferro trio with Shota Ishikawa & Sebastiaan Kaptein
     date: 2018-03-02 20:00:00
     location: TBA
-    venue: 'Kobe, Japan'
+    venue: Kobe (Japan)
     url: 'https://www.facebook.com/dai.murata.3'
   - title: Duo Mike Boddé and Mike del Ferro-Mike Kwadraat
     date: 2018-03-10 20:00:00
