--- a/_config.yml
+++ b/_config.yml
@@ -75,20 +75,20 @@ gigs:
     venue: Dordrecht
     url: www.kunstmin.nl
   - title: Mike del Ferro trio with Shota Ishikawa & Sebastiaan Kaptein
-    date: 2018-03-01 20:00:00
-    location: TBA
+    date: 2018-03-02 19:00:00
+    location: Tenshodo Kobe Kasugano
     venue: Kobe (Japan)
-    url: 'https://www.facebook.com/dai.murata.3'
-  - title: Mike del Ferro and Wim Dijkgraaf
-    date: 2018-01-21 00:00:00
+    url: 'http://www.kobetenshodo.com'
+  - title: Mike del Ferro and Wim Dijkgraaf (afternoon!)
+    date: 2018-01-21 14:00:00
     location: Plus etage
     venue: Baarle Nassau
-    url:
+    url: 'http://www.plusetage.nl/'
   - title: Mike del Ferro trio with Shota Ishikawa & Sebastiaan Kaptein
-    date: 2018-03-02 20:00:00
-    location: TBA
+    date: 2018-03-02 17:00:00
+    location: Kobe Modern Jazzclub
     venue: Kobe (Japan)
-    url: 'https://www.facebook.com/dai.murata.3'
+    url: 'https://www.facebook.com/events/1224373214331517/'
   - title: Duo Mike Boddé and Mike del Ferro-Mike Kwadraat
     date: 2018-03-10 20:00:00
     location: Paradox
@@ -105,8 +105,8 @@ gigs:
     venue: Amsterdam
     url: www.munganga.nl
   - title: Mike del Ferro trio with Shota Ishikawa & Sebastiaan Kaptein
-    date: 2018-03-03 20:30:00
-    location: TBA
+    date: 2018-03-04 19:30:00
+    location: Request
     venue: Kobe (Japan)
     url: 'https://www.facebook.com/dai.murata.3'
   - title: >-
@@ -145,9 +145,9 @@ gigs:
     date: 2018-02-03 20:00:00
     location: Pernissimo
     venue: Pernis (NL)
-    url: www.pernissimo.nl
-  - title: Mike del Ferro trio
-    date: 2018-02-04 15:00:00
+    url: www.pernissimo.org
+  - title: Mike del Ferro trio (afternoon!)
+    date: 2018-02-04 16:00:00
     location: TBA
     venue: Münster (Germany)
     url:
