--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ gigs:
     location: Splendor
     venue: Amsterdam (NL)
     url: 'http://www.splendoramsterdam.com'
-  - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
-    date: 2018-02-08 20:15:00
-    location: De Vereeniging
-    venue: Nijmegen (NL)
-    url: 'http://www.stadsschouwburgendevereeniging.nl'
+  - title: 'Summer evening up in the Dom tower, Utrecht'
+    date: 2018-08-20 20:00:00
+    location: Domtoren
+    venue: Utrecht (NL)
+    url: 'http://www.klokkenspelvereniging.nl'
   - title: 'Duo Mike Bodde & Mike del Ferro, Mike kwadraat'
     date: 2018-02-16 20:00:00
     location: De Harmonie
@@ -139,3 +139,13 @@ gigs:
     location: TBA
     venue: Tirana (Albania)
     url:
+  - title: 'Sunday afternoon Jazz, Mike del Ferro and Friends, more details soon'
+    date: 2018-04-15 16:00:00
+    location: Splendor
+    venue: Amsterdam (NL)
+    url: 'https://www.splendoramsterdam.com'
+  - title: 'Sunday afternoon Jazz, Mike del Ferro and Friends, more details soon'
+    date: 2018-05-13 16:00:00
+    location: Amsterdam (NL
+    venue: Splendor
+    url: 'https://www.splendoramsterdam.com'
