Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -106,3 +106,8 @@ gigs:
     location: TBA
     venue: Tirana (Albania)
     url:
+  - title: Solo recital (afternoon!)
+    date: 2018-04-21 15:30:00
+    location: Het Klavier
+    venue: Vorden (NL)
+    url: 'https://www.het-klavier.nl'
