--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ gigs:
     location: Tivoli Vredenburg
     venue: Utrecht
     url: 'http://harpfestival.nl/nl/'
-  - title: 'Lisbon Jazz school, artist in residence'
+  - title: 'Lisbon Jazz school, artist in residence , 11 & 12 April'
     date: 2018-04-11 13:30:00
     location: tba
     venue: 'Lisbon, Portugal'
@@ -26,11 +26,11 @@ gigs:
     location: Splendor
     venue: Amsterdam (NL)
     url: 'http://www.splendoramsterdam.com'
-  - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
-    date: 2018-03-16 20:15:00
-    location: Singer
-    venue: Laren (NL)
-    url: 'http://www.singerlaren.nl'
+  - title: Mike del Ferro trio
+    date: 2018-04-01 15:15:00
+    location: Blijburg
+    venue: Amsterdam (NL)
+    url: 'http://www.blijburg.nl'
   - title: 'Mike del Ferro & Mike Boddé, Mike kwadraat'
     date: 2018-03-23 20:15:00
     location: Het Klooster / Theater
@@ -66,15 +66,15 @@ gigs:
     location: Energiehuis
     venue: Dordrecht
     url: 'http://www.kunstmin.nl'
-  - title: With Eleanor McEvoy - St.Patrick's Irish music Festival
-    date: 2018-03-17 20:00:00
-    location: Splendor
+  - title: Solo concert
+    date: 2018-05-19 20:00:00
+    location: Munganga
     venue: Amsterdam (NL)
-    url: 'http://www.splendoramsterdam.com'
+    url: 'http://www.munganga.nl'
   - title: Mike del Ferro & Svenja Staats
     date: 2018-06-10 15:00:00
-    location: TBA
-    venue: TBA
+    location: Ambassador hotel
+    venue: Amsterdam
     url:
   - title: Jazz meets Bernstein
     date: 2018-07-24 20:00:00
